media-server/plex/service.yaml
apiVersion: v1
kind: Service
type: LoadBalancer
metadata:
  name: plex
  namespace: media-server
spec:
  selector:
    app: plex
  ports:
    - name: http
      port: 32400
      targetPort: http
    - name: plex-dlna
      port: 32469
      targetPort: 32469
    - name: udp-plex-dlna
      protocol: UDP
      port: 1900
      targetPort: 1900
    - name: udp-bonjour-avahi
      protocol: UDP
      port: 5353
      targetPort: 5353
    - name: plex-companion
      port: 8324
      targetPort: 8324
    - name: udp-gdm-discovery-1
      protocol: UDP
      port: 32410
      targetPort: 32410
    - name: udp-gdm-discovery-2
      protocol: UDP
      port: 32412
      targetPort: 32412
    - name: udp-gdm-discovery-3
      protocol: UDP
      port: 32413
      targetPort: 32413
    - name: udp-gdm-discovery-4
      protocol: UDP
      port: 32414
      targetPort: 32414
